<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:id="@+id/HomeGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/head_border">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/head"

                    android:text="鱼知乐"
                    android:textColor="@color/tab"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:paddingRight="88dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/iconfont_sousuo" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"/>


        <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:background="@drawable/head_border"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="6dp">

            <RadioButton
                android:id="@+id/rb_shouye"
                style="@style/main_tab_bottom"
                android:checked="false"
                android:drawableTop="@drawable/home_progress"
                android:text="@string/tab_function" />

            <RadioButton
                android:id="@+id/rb_weibo"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/dongtai_progress"
                android:text="@string/tab_news_center" />

            <RadioButton
                android:id="@+id/rb_yulequan"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/ylq_progress"
                android:text="@string/tab_smart_service" />

            <RadioButton
                android:id="@+id/rb_yuyisheng"
                style="@style/main_tab_bottom"
                android:checked="false"
                android:drawableTop="@drawable/yys_progress"
                android:text="@string/tab_gov_affairs" />

            <RadioButton
                android:id="@+id/rb_mall"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/mall_progress"
                android:text="@string/tab_setting" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/drawer"
        android:orientation="vertical"
        android:padding="8dp">

        <include layout="@layout/left_view_layout"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>