<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333738"
    android:orientation="vertical"
    android:baselineAligned="true"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#444755">

        <LinearLayout
            android:id="@+id/SettingBtnlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/SettingBtn"
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/slide_setting"
                android:padding="10dp"
                android:visibility="gone"
                android:paddingTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LoginThisAPP"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:layout_toLeftOf="@id/SettingBtnlayout"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true">

            <com.thinksky.redefine.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/side_user_avatar"
                android:id="@+id/Left_UserHead"
                android:scaleType="centerCrop"
                tools:border_color="@color/light"
                tools:border_width="2dp" />

            <TextView
                android:id="@+id/myUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:text="登录ThinkOX"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/imageView"
        android:background="#292A36" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
            android:id="@+id/LeftHot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/weibo_name"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/menu_more_details" />
        </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="visible"
                android:background="@drawable/menu_seperator">

            </LinearLayout>
            <RelativeLayout
                android:id="@+id/LeftForum"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="论坛"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="visible"
                android:background="@drawable/menu_seperator">

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/issue_name"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="visible"
                android:background="@drawable/menu_seperator">
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/event"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/event_name"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="visible"
                android:background="@drawable/menu_seperator">
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/group_name"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="visible"
                android:background="@drawable/menu_seperator">
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/news"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/news_name"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="visible"
                android:background="@drawable/menu_seperator">
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/LeftMessage"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/message_name"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/CheckUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="检查更新"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="visible"
                android:background="@drawable/menu_seperator">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/menu_seperator"
                android:visibility="gone">
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/LeftCross"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="商城"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/LeftScrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/leftview_list_bg"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="小纸条"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="gone"
                android:background="@drawable/menu_seperator">
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/ScanCode"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="扫描二维码"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="gone"
                android:background="@drawable/menu_seperator">
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/LeftCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="每日签到"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="visible"
                android:background="@drawable/menu_seperator">
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/clear_cache"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/menu_more_details" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/menu_seperator"
                android:visibility="gone">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>